Create several guides, standards and templates. Modify some other files

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -13,7 +13,7 @@
   --ifm-color-primary-contrast-background: #EEEAF3;
   --ifm-color-primary-contrast-foreground: #EEEAF3;
 
-  --ifm-color-secondary: #2d0078;
+  --ifm-color-secondary: #EEEAF3;
   --ifm-color-secondary-dark: #240060;
   --ifm-color-secondary-darker: #1b0048;
   --ifm-color-secondary-darkest: #120030;
